package com.goorm.springmissionsplayground.mission02_spring_core_basic.task11_object_oriented_design_principles.notification;

public interface NotificationChannel {

    void notify(String userId, String message);
}
